manually enter linker table into migration

--- a/templates/shipping_rates/form.html.twig
+++ b/templates/shipping_rates/form.html.twig
@@ -47,7 +47,7 @@
             <h1>Welcome to the Lands Between Shipping Rates Service</h1>
             <p>Click on the map below to select your origin and destination.</p>
 
-            {{ form_start(form, { 'action': path('app_shipping_get_rates') }) }}
+            {{ form_start(form, { 'action': path('app_shipping_rates') }) }}
 
             <div class="form-control">
                 {{ form_label(form.origin) }}
